Bug 1400810 - fix context menus looking squashed while retaining changes to shortcut and footer alignment, r=johannh
MozReview-Commit-ID: GPAEdE7eMxk

UltraBlame original commit: 7dae5e4024d3a473c37be57024adc452fe104835

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -2238,37 +2238,6 @@ flex
 1
 ;
 }
-.
-cui
--
-widget
--
-panelview
-.
-subviewbutton
-.
-panel
--
-subview
--
-footer
-.
-menu
--
-accel
--
-container
-{
--
-moz
--
-box
--
-pack
-:
-end
-;
-}
 #
 appMenu
 -
@@ -10371,6 +10340,27 @@ end
 :
 6px
 ;
+padding
+-
+inline
+-
+start
+:
+0
+!
+important
+;
+/
+*
+to
+override
+menu
+.
+css
+on
+Windows
+*
+/
 -
 moz
 -
@@ -10428,6 +10418,59 @@ start
 :
 6px
 ;
+}
+.
+subviewbutton
+>
+.
+menu
+-
+accel
+-
+container
+>
+.
+menu
+-
+iconic
+-
+accel
+.
+subviewbutton
+>
+.
+menu
+-
+accel
+-
+container
+>
+.
+menu
+-
+accel
+{
+margin
+-
+inline
+-
+end
+:
+0
+!
+important
+;
+/
+*
+to
+override
+menu
+.
+css
+on
+Windows
+*
+/
 }
 #
 widget
@@ -12135,7 +12178,7 @@ box
 -
 pack
 :
-start
+end
 ;
 margin
 -
